# honeypot_storage

./: Cargo.toml  LOG.md  build_pi.sh
cross_configs/: aarch64-unknown-linux-gnu.toml
src/: body_utils.rs  main.rs
src/db/: mod.rs
src/storage/: mod.rs
thread_dump/google/gemma-4-26b-a4b/: 01_Axum-background-worker-using-shared-channel.md  02_Axum Background Request Processing Worker.md  03_Refactor Axum AppState to Sender.md  04_Passing Axum Requests Through Tokio Channels.md  05_Optimizing Service Performance and Reliability.md  06_Debugging and fixing failing cases.md  07_Optimize Rust database transaction order.md  08_Refactor Rust save_request avoiding clones.md  09_Refactoring.md  10_Refactoring 1-failed.md  11_Refactoring SQLite to DuckDB via Features.md  12_Fixing Honeypot Storage Rust Errors.md  13_Migrating SQLite to DuckDB via Features  14_Fixing Rust Feature Gate Errors.md  15_Rust cfg macro vs attribute.md  16_Fixing honeypot_storage Rust compilation errors.md  17_Rust project cross compile setup.md  18_Adding Query Column to Requests Table.md  19_Implementing Request Query Column Migrations.md  20_Store URI query in database.md
thread_dump/google/gemma-4-4b/: 01_Cross compile my drive project.md
thread_dump/z.ai/glm-4.7-flash-mix/: 02_Cross Compiling My Drive for Raspberry Pi.md
