[package]
name = "honeypot_storage"
version = "1.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.7"
futures-util = "0.3.32"
http-body-util = "0.1.3"

duckdb = { version = "1.10504.0", optional= true, features = ["bundled"] }
sqlx = { version = "0.9.0", optional=true, features = ["sqlite", "runtime-tokio"] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["duckdb"]
sqlite = ["dep:sqlx"]
duckdb = ["dep:duckdb"]
